<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pager_left">Previous Page</string>
    <string name="pager_mid">Delete</string>
    <string name="pager_right">Next Page</string>
    <string name="dvbs_scan_tip">Please press the right key to scan</string>
    <string name="schedulelist_nofiles">There is no recorded schedule! Please press "Record" key to add one.</string>
    <string name="schedulelist_nofiles_disable_add">There is no recorded schedule!</string>
    <string name="exit">Exit</string>
    <string name="selected">Selected</string>
    <string name="add_schedule">PVR</string>
    <string name="pvr_schedule_replace">Replace</string>
    <string name="pvr_schedule_add">Add</string>
    <string name="pvr_schedule_cancel">Cancel</string>
    <string name="pvr_schedule_ok">OK</string>
    <string name="pvr_schedule_edit">Edit</string>
    <string name="pvr_title_device_info">Device Info</string>
    <string name="pvr_deviceinfo_info">Info</string>
    <string name="pvr_deviceinfo_set_timeshift">Set Timeshift</string>
    <string name="pvr_deviceinfo_set_pvr">Set PVR</string>
    <string name="pvr_deviceinfo_format">Format</string>
    <string name="pvr_deviceinfo_speed_test">Speed Test</string>
    <string name="pvr_disk_no_name">No Name</string>
    <string name="pvr_disk_size_temp_3_8_3_8gb" translatable="false">3.8/3.8GB</string>
    <string name="pvr_disk_ispvr_pvr_tshift">PVR/Timeshift</string>
    <string name="pvr_disk_na" translatable="false">NA</string>
    <string name="pvr_nf_info" translatable="false">00:00:00</string>
    <string name="pvr_play_info" translatable="false">/</string>
    <string name="pvr_playlist_record_list">Record List</string>
    <string name="pvr_playlist_page_up">Page Up</string>
    <string name="pvr_playlist_page_down">Page Down</string>
    <string name="pvr_playlist_info">Info</string>
    <string name="pvr_playlist_record_detail">Record Detail</string>
    <string name="pvr_playlist_programe_info">Program Info</string>
    <string name="pvr_playlist_channel_num">Channel Number</string>
    <string name="pvr_playlist_channel_name">Channel Name</string>
    <string name="pvr_playlist_program_name">File Name</string>
    <string name="pvr_playlist_date">Date</string>
    <string name="pvr_playlist_week">Week</string>
    <string name="pvr_playlist_time">Time</string>
    <string name="pvr_playlist_duration">Duration</string>
    <string name="pvr_tshift_working_rec_time" translatable="false">[00:00:03/00:00]</string>
    <string name="pvr_tshift_working_cur_time" translatable="false">13:02:28</string>
    <string name="pvr_tshift_offset_time" translatable="false">-00:00:00</string>
    <string name="pvr_tshift_13_00" translatable="false">13:00</string>
    <string name="pvr_tshift_13_30" translatable="false">13:30</string>
    <string name="pvr_disksetup_disk_setup">Disk Setup</string>
    <string name="pvr_disksetup_select">Select</string>
    <string name="pvr_schedulepvr_ch41" translatable="false">CH41</string>
    <string name="pvr_schedulepvr_date" translatable="false">2013/01/04 13:22 Tue</string>
    <string name="pvr_schedulepvr_time" translatable="false">00hr 00min</string>
    <string name="pvr_schedulepvr_week">Week</string>
    <string name="pvr_schedulepvr_record">Record</string>
    <string name="pvr_schedulepvr_schedule_list">Schedule List</string>
    <string name="pvr_schedulepvr_diskinfo" translatable="false">No Name: 3.8/3.8 GB</string>
    <string name="pvr_schedulepvr_add_schedule">Add Schedule</string>
    <string name="pvr_schedulepvr_selected">Selected</string>
    <string name="pvr_schedulepvr_schedule_list2">Schedule List</string>
    <string name="pvr_schedulepvr_disk_info" translatable="false">No Name: 3.8/3.8 GB</string>
    <string name="pvr_confirm_yes">Yes</string>
    <string name="pvr_confirm_no">No</string>
    <string name="pvr_dialog_Loadding">Loading</string>
    <string name="pvr_schedulelist_wednesday" translatable="false">Wednesday</string>
    <string name="pvr_schedulelist_replace_line1">Schedules overlapped!</string>
    <string name="pvr_schedulelist_replace_line2">Do you want to replace these schedules?</string>
    <string name="pvr_schedulelist_delete_line1">Delete schedule!</string>
    <string name="pvr_schedulelist_delete_line2">Do you want to delete these schedules?</string>
    <string name="menu_settings">Settings</string>
    <string name="fav_list_is_full">Favorites list is full.</string>
    <string-array name="ampm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="date_separator" translatable="false">/</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="power_on_off_time_same">Two timers can\'t be the same. Please reset</string>
    <string name="sleep_timer_tip_text">The Power will be turned off.</string>
    <string name="sleep_timer_btn_text">Press any key to continue</string>
    <string name="menu_dialog_numzero">Channel Number can\'t be 0!</string>
    <string name="menu_delete_biss_key_tip">Are you sure you want to delete this BISS key?</string>
    <string name="font" translatable="false">sans-serif</string>
    <string name="closed_caption_unknown_language">Closed captions <xliff:g id="unknown_language_index" example="1">%1$d</xliff:g></string>
    <string name="msg_unable_to_start_system_captioning_settings">Unable to start the system-wide preferences for closed captions.</string>
    <string name="side_panel_title_closed_caption">Closed Captions</string>
    <string name="closed_caption_option_item_off">Off</string>
    <string name="closed_caption_system_settings">Customize Formatting</string>
    <string name="closed_caption_system_settings_description">Set system-wide preferences for closed captions</string>
    <string name="audio_type_ac3" translatable="false">AC3</string>
    <string name="audio_type_mpeg1l2" translatable="false">MPEG1-L2</string>
    <string name="audio_type_aac" translatable="false">AAC</string>
    <string name="audio_type_he_aac" translatable="false">HE_AAC</string>
    <string name="audio_type_he_aacv2" translatable="false">HE_AACv2</string>
    <string name="audio_type_dts" translatable="false">DTS</string>
    <string name="audio_type_dts_express" translatable="false">DTS_EXPRESS</string>
    <string name="audio_type_dts_hd">DTS_HD Master Audio</string>
    <string name="no_support_epg">EPG is not supported!</string>
    <string name="fvp_alert_dialog"  translatable="false">Internet access is required for Freeview Play, would you please connect Internet?</string>
    <string name="fvp_alert_title"  translatable="false">Warning</string>
    <string name="hbbtv_failed_title">Warning</string>
    <string name="hbbtv_failed_message">The show that you have chosen is currently not available</string>
    <string name="dvr_device_no">No Device</string>
    <string name="menu_subtitle_track">Subtitle Tracks</string>
    <string name="divx_dialog_warning">Your device is already registered.\nAre you sure you wish to unregister the device?</string>
    <string name="special_input_toast">No <xliff:g id="input_name">%1$s</xliff:g> device found!</string>
    <string name="menu_arrays_second_audio">Second audio</string>
    <string name="menu_arrays_third_audio">Third audio</string>
    <string name="detail_banner_now">Now</string>
    <string name="detail_banner_next">Next</string>
    <string name="one_key_title">Function Key Menu</string>
    <string name="one_key_power_off">Power</string>
    <string name="one_key_ch_next">CH +</string>
    <string name="one_key_ch_last">CH -</string>
    <string name="one_key_volume_increase">Vol +</string>
    <string name="one_key_volume_decrease">Vol -</string>
    <string name="one_key_source_control">Source</string>
    <string name="nav_fav_list_move">Move</string>
    <string name="detail_banner_dis">Description: </string>
    <string name="detail_banner_category">Genre: </string>
    <string name="menu_dvbs_antenna_type_tip">Press RED color key to show band and frequency settings.</string>
    <string name="dvbt_single_rf_frequency"><xliff:g id="frequency_name">%1$s</xliff:g> (<xliff:g id="frequency">%2$s</xliff:g> KHz)</string>
    <string name="dvbs_same_port_lnb_toast">Some ports of satellites can\'t be the same, please check DiSEqC settings.</string>
    <string name="scan_trd_uk_reg_reg_x">Region <xliff:g id="select_region_detail">%1$s</xliff:g></string>
    <string name="dvbs_band_freq_user_define">User Defined</string>
    <string name="dvbs_satellite_antenna_type">Satellite Antenna Type</string>
    <string name="dvbs_sub_band_frequency">Sub Band Frequency</string>
    <string name="dvbs_user_define_frequency">User Defined Frequency</string>
    <string name="dvbs_sub_user_define_frequency">Sub User Defined Frequency</string>
    <string name="dvbs_satellite_detail_low_freq">Low frequency</string>
    <string name="dvbs_satellite_detail_high_freq">High frequency</string>
    <string name="dvbs_satellite_detail_switch_freq">Switch frequency</string>
    <string name="dvbs_diseqc12_movement_longitude">My longitude</string>
    <string name="dvbs_diseqc12_movement_latitude">My latitude</string>
    <string name="dvbs_diseqc12_movement_orbit_position">Satellite orbit position</string>
    <string name="dvbs_diseqc12_movement_GotoXX">Goto x.x°</string>
    <string name="str_Fav_x">Favorites<xliff:g id="fav_index">%d</xliff:g></string>
    <string name="dvbs_satellite_detail">Satellite Detail</string>
    <string name="dvbs_lnb_skip_scan">Skip scan</string>
    <string name="simple_dialog_title_info">Info</string>
    <string name="simple_dialog_title_warning">Warning</string>
    <string name="simple_dialog_title_error">Error</string>
    <string name="nav_oad_latest_version_already">Your system is up to date.</string>
    <string name="tuner_tv">Tuner(TV)</string>
    <string name="menu_system_info_channel_title">RF Channel Number</string>
    <string name="nav_select_find_no_channel">No channels found.</string>
    <string name="nav_fav_skip_flow">The channel is skipped, and current operation is not allowed.</string>
    <string name="menu_tv_channel_edit_info">Channel Edit Info</string>
    <string name="menu_tv_channel_type">Channel Type</string>
    <string name="menu_tv_channel_delete">Channel Delete</string>
    <string name="oad_scanning_tip">OAD scan may take a while to complete</string>
    <string name="oad_flash_failed_title">Upgrade failed</string>
    <string name="oad_schedule_title">OAD Schedule</string>
    <string name="soft_key_one" translatable="false">1</string>
    <string name="soft_key_two" translatable="false">2</string>
	<string name="soft_key_three" translatable="false">3</string>
	<string name="soft_key_four" translatable="false">4</string>
    <string name="soft_key_five" translatable="false">5</string>
    <string name="soft_key_six" translatable="false">6</string>
    <string name="soft_key_seven" translatable="false">7</string>
    <string name="soft_key_eight" translatable="false">8</string>
    <string name="soft_key_nine" translatable="false">9</string>
    <string name="soft_key_zero" translatable="false">0</string>
    <string name="soft_key_chplus" translatable="false">CH+</string>
    <string name="soft_key_chminus" translatable="false">CH-</string>
    <string name="soft_key_info" translatable="false">Info</string>
    <string name="soft_key_subtitle" translatable="false">Subtitle</string>
    <string name="soft_key_ttx" translatable="false">TTX</string>
    <string name="soft_key_audio" translatable="false">Audio</string>
    <string name="soft_key_epg" translatable="false">Guide</string>
    <string name="soft_key_input" translatable="false">Input</string>
    <string name="soft_key_exit" translatable="false">Exit</string>
    <string name="soft_key_mts" translatable="false">MTS</string>
</resources>