<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/keyboard_width"
    android:layout_height="wrap_content"
    android:background="@drawable/key_bg"
    android:paddingTop="27dp"
    android:paddingBottom="27dp"
    android:gravity="center"
    >
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/one"
            style="@style/keybutton"
            android:text="@string/soft_key_one"
            android:textSize="@dimen/key_item_num_size"
            android:textColor="#f6f6f6"
            />
        <Button
            android:id="@+id/two"
            style="@style/text_num_button"
            android:text="@string/soft_key_two"

            />
        <Button
            android:id="@+id/three"
            style="@style/text_num_button"
            android:text="@string/soft_key_three"
            />
        <Button
            android:id="@+id/four"
            style="@style/text_num_button"
            android:text="@string/soft_key_four"
            />
        <Button
            android:id="@+id/five"
            style="@style/text_num_button"
            android:text="@string/soft_key_five"
            />
        <Button
            android:id="@+id/six"
            style="@style/text_num_button"
            android:text="@string/soft_key_six"
            />
        <Button
            android:id="@+id/seven"
            style="@style/text_num_button"
            android:text="@string/soft_key_seven"
            />
        <Button
            android:id="@+id/eight"
            style="@style/text_num_button"
            android:text="@string/soft_key_eight"
            />
        <Button
            android:id="@+id/nine"
            style="@style/text_num_button"
            android:text="@string/soft_key_nine"
            />
        <Button
            android:id="@+id/zero"
            style="@style/text_num_button"
            android:text="@string/soft_key_zero"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginTop="@dimen/key_item_margin_top"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/play"
            android:src="@drawable/keyboard_play"
            style="@style/keybutton"
            android:scaleType="fitCenter"
            android:padding="@dimen/image_padding"
            />
        <ImageButton
            android:id="@+id/pause"
            style="@style/image_button"
            android:src="@drawable/keyboard_pause"
            />
        <ImageButton
            android:id="@+id/stop"
            style="@style/image_button"
            android:src="@drawable/keyboard_stop"
            />
        <ImageButton
            android:id="@+id/record"
            style="@style/image_button"
            android:src="@drawable/keyboard_record"
            />
        <Button
            android:id="@+id/chplus"
            style="@style/text_button"
            android:text="@string/soft_key_chplus"
            />
        <Button
            android:id="@+id/info"
            style="@style/text_button"
            android:text="@string/soft_key_info"

            />
        <Button
            android:id="@+id/subtitle"
            style="@style/text_button"
            android:text="@string/soft_key_subtitle"
            />
        <Button
            android:id="@+id/ttx"
            style="@style/text_button"
            android:text="@string/soft_key_ttx"
            />
        <Button
            android:id="@+id/audio"
            style="@style/text_button"
            android:text="@string/soft_key_audio"
            />
        <Button
            android:id="@+id/mts"
            style="@style/text_button"
            android:text="@string/soft_key_mts"
            />
        <Button
            android:id="@+id/epg"
            style="@style/text_button"
            android:text="@string/soft_key_epg"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/middle"
        android:layout_marginTop="@dimen/key_item_margin_top"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/previous"
            style="@style/keybutton"
            android:src="@drawable/keyboard_fr"
            android:scaleType="fitCenter"
            android:padding="@dimen/image_padding"
            />
        <ImageButton
            android:id="@+id/fastrewind"
            style="@style/image_button"
            android:src="@drawable/keyboard_pre"
            />
        <ImageButton
            android:id="@+id/fastforward"
            style="@style/image_button"
            android:src="@drawable/keyboard_next"
            />
        <ImageButton
            android:id="@+id/next"
            style="@style/image_button"
            android:src="@drawable/keyboard_ff"
            />
        <Button
            android:id="@+id/chminus"
            style="@style/text_button"
            android:text="@string/soft_key_chminus"
            />
        <Button
            android:id="@+id/input"
            style="@style/text_button"
            android:text="@string/soft_key_input"/>

        <ImageButton
            android:id="@+id/red"
            style="@style/image_button"
            android:src="@drawable/keyboard_red"
            />
        <ImageButton
            android:id="@+id/green"
            style="@style/image_button"
            android:src="@drawable/keyboard_green"
            />
        <ImageButton
            android:id="@+id/yellow"
            style="@style/image_button"
            android:src="@drawable/keyboard_yellow"
            />
        <ImageButton
            android:id="@+id/blue"
            style="@style/image_button"
            android:src="@drawable/keyboard_blue"
            />
        <Button
            android:id="@+id/exit"
            style="@style/text_button"
            android:text="@string/soft_key_exit"
            />
    </LinearLayout>


</RelativeLayout>