<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/device_info_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >

    <!-- android:textAppearance="@style/nav_pvr_filelist_text" -->

    <TextView
        android:id="@+id/schedule_channel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="24dp"
        android:text="@string/pvr_schedulepvr_ch41"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/schedule_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pvr_schedulepvr_date"
            android:textColor="@color/dvr_record_info_txt_color"
            android:textSize="@dimen/nav_textsize_normal" />

        <TextView
            android:id="@+id/schedule_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/pvr_schedulepvr_time"
            android:textColor="@color/dvr_record_info_txt_color"
            android:textSize="@dimen/nav_textsize_normal" />

        <TextView
            android:id="@+id/schedule_internel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/pvr_schedulepvr_week"
            android:textColor="@color/dvr_record_info_txt_color"
            android:textSize="@dimen/nav_textsize_normal" />

        <TextView
            android:id="@+id/schedule_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/pvr_schedulepvr_record"
            android:textColor="@color/dvr_record_info_txt_color"
            android:textSize="@dimen/nav_textsize_normal" />
    </LinearLayout>

</LinearLayout>