<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/device_info_hint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textColor="@color/white"
    android:textSize="@dimen/nav_pvr_textsize" >

    <!-- android:textAppearance="@style/nav_pvr_filelist_text" -->

    <TextView
        android:id="@+id/disk_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/tk_cm_color_key_green"
        android:text="@string/pvr_disk_no_name"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/disk_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dvr_10_dp"
            android:text="@string/pvr_disk_size_temp_3_8_3_8gb"
            android:textColor="@color/dvr_record_info_txt_color" />

        <TextView
            android:id="@+id/disk_is_tshift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dvr_10_dp"
            android:src="@drawable/tk_cm_color_key_blue"
            android:text="@string/pvr_disk_ispvr_pvr_tshift"
            android:textColor="@color/dvr_record_info_txt_color" />

        <TextView
            android:id="@+id/disk_na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/pvr_disk_na"
            android:textColor="@color/dvr_record_info_txt_color" />
    </LinearLayout>

</LinearLayout>