<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pvr_timeshift_deviceinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/device_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingBottom="20dp"
        android:background="@color/nav_ch_list_title_back"
        android:paddingStart="@dimen/nav_channel_title_padding"
        android:paddingTop="@dimen/nav_channel_title_padding_top"
        android:text="@string/pvr_title_device_info"
        android:textColor="@color/nav_channel_list_txt"
        android:textSize="@dimen/nav_channel_list_textsize_large"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/device_info_list_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/nav_ch_list_view_back"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/device_info_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:padding="10dip"
            android:stretchColumns="2"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone" >

            <TableRow android:gravity="center" >

                <ImageView
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:padding="6dip"
                    android:src="@drawable/tk_cm_key_enter" />

                <TextView
                    android:layout_column="1"
                    android:layout_gravity="bottom"
                    android:padding="4dip"
                    android:text="@string/pvr_deviceinfo_info"
                    android:textAppearance="@style/nav_pvr_filelist_text" />

                <ImageView
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:padding="6dip"
                    android:src="@drawable/tk_cm_key_exit" />

                <TextView
                    android:layout_column="1"
                    android:layout_gravity="bottom"
                    android:padding="4dip"
                    android:text="@string/exit"
                    android:textAppearance="@style/nav_pvr_filelist_text" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/device_info_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/device_info_hint"
            android:layout_alignParentStart="true"
            android:dividerHeight="0dip"
            android:gravity="center_horizontal"
            android:listSelector="@drawable/nav_ch_list"
            android:textColor="@color/white"
            android:textSize="13sp" >
        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/device_info_sub_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/device_info_list_root"
        android:background="@color/nav_ch_list_view_back"
        android:orientation="vertical"
        android:visibility="gone" 
        >

        <Button
            android:id="@+id/disksetting_setshift"
            style="@style/pvr_tshift_schedulelist_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_dialog_button"
            android:focusable="true"
            android:gravity="start"
            android:text="@string/pvr_deviceinfo_set_timeshift" />

        <Button
            android:id="@+id/disksetting_setpvr"
            style="@style/pvr_tshift_schedulelist_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:background="@drawable/menu_dialog_button"
            android:text="@string/pvr_deviceinfo_set_pvr" />

        <Button
            android:id="@+id/disksetting_format"
            style="@style/pvr_tshift_schedulelist_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:background="@drawable/menu_dialog_button"
            android:text="@string/pvr_deviceinfo_format" />

        <Button
            android:id="@+id/disksetting_speedtest"
            style="@style/pvr_tshift_schedulelist_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:background="@drawable/menu_dialog_button"
            android:text="@string/pvr_deviceinfo_speed_test" />
    </LinearLayout>

</LinearLayout>