<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and limitations under the License
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_gray"
    android:padding="40dip" >
    
    <TextView
        android:id="@+id/title"
        style="@style/Canvas.Text.Dialog.List.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/dvbs_band_freq_user_define" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center" >

        <EditText
            android:id="@+id/edittext_low_freq"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:digits="1234567890"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            android:textSize="@dimen/nav_channel_list_textsize_large" />

        <EditText
            android:id="@+id/edittext_high_freq"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edittext_low_freq"
            android:digits="1234567890"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            android:textSize="@dimen/nav_channel_list_textsize_large" />

        <EditText
            android:id="@+id/edittext_switch_freq"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edittext_high_freq"
            android:digits="1234567890"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:maxLength="5"
            android:singleLine="true"
            android:textSize="@dimen/nav_channel_list_textsize_large" />

        <TextView
            android:id="@+id/low_freq"
            style="@style/Canvas.Scan.Text.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edittext_high_freq"
            android:text="@string/dvbs_satellite_detail_low_freq" />

        <TextView
            android:id="@+id/high_freq"
            style="@style/Canvas.Scan.Text.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edittext_high_freq"
            android:text="@string/dvbs_satellite_detail_high_freq" />

        <TextView
            android:id="@+id/switch_freq"
            style="@style/Canvas.Scan.Text.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edittext_switch_freq"
            android:text="@string/dvbs_satellite_detail_switch_freq" />
    </RelativeLayout>

</RelativeLayout>